small inputs 100% width on mobile fixes #622

--- a/static-src/scss/core/_forms.scss
+++ b/static-src/scss/core/_forms.scss
@@ -20,6 +20,10 @@ textarea {
 
     &.m-small {
         @extend .col-6-12;
+
+        @media screen and (max-width: $mobile-breakpoint) {
+            width: 100%;
+        }
     }
 
     &.input-number {
